[package]
name = "bevy-pbr-rust"
version = "0.3.0"
edition = "2021"

[lib]
crate_type = ["dylib", "rlib"]

[dependencies]
bitflags = "2.0.1"
spirv-std = "0.6.0"
permutate-macro = { git = "https://github.com/Bevy-Rust-GPU/permutate-macro", tag = "v0.4.0" }
rust-gpu-bridge = { git = "https://github.com/Bevy-Rust-GPU/rust-gpu-bridge", branch = "master", features = ["spirv-std"] }
